Update CSS for gallery and cards layout, enhance iframe styling, and adjust HTML structure for better responsiveness. Modify GSAP scroll trigger settings for improved functionality.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="wrapper !min-h-[100vh]">
         <div class="panel gradient-green !min-h-[100vh]">
             <img src="images/manimegalimam.webp" class="md:block hidden !w-full !h-[100vh] box gradient-blue" alt="">
-            <img src="images/mam-mob.jpg" class="md:hidden block !w-full !h-[full] box gradient-blue" alt="">
+            <img src="images/mam-mob.jpg" class="md:hidden block !w-full object-fit-contain !h-[full] box gradient-blue" alt="">
           
         </div>
     
@@ -157,7 +157,7 @@
                 <div class="flex py-4 items-center"> 
                     <img src="images/ele.png" alt="" class="md:h-30 h-20"><h2 class="ssvm-h1 text-start line-1 anim-typewriter heading-1">P<span class="text-stroke">a</span>st Ed<span class="text-stroke">i</span>tion Highlights</h2>
                     </div>
-            <div class="cards py-4 gap-20 flex md:flex-row flex-col items-center">
+            <div class="cards py-4 gap-20 flex md:flex-row  items-center">
                 <iframe width="100%" class="md:w-[450px] h-[350px] w-full"  src="https://www.youtube.com/embed/6qpZGsod9dk?si=iou7BU5uIPV1CbGJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe width="100%" class="md:w-[450px] h-[350px] w-full"  src="https://www.youtube.com/embed/d43oTWwyK_g?si=-GphQs6_O_TidXgN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <iframe width="100%" class="md:w-[450px] h-[350px] w-full"  src="https://www.youtube.com/embed/lA-mD4EEG9Y?si=ztFP5MFBVdN07CQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
