Update index.html to improve clarity in registration categories by removing "Gurus" from titles, adding target="_blank" to registration links for external pages, and enhancing contact information styling for better readability.

--- a/index.html
+++ b/index.html
@@ -239,19 +239,19 @@
                     <h4 class="pt-5 Registration text-2xl">Registration</h4>
                     <div class="flex flex-row gap-3 justify-start items-start">
                         <img src="images/ele.png" alt="" class="h-[20px] pt-1">
-                        <p>⁠Gurus of SSVM Institutions (Self-Nomination) - <a href="https://zfrmz.com/aTCRosoAmrk6TL01K5Al" class="text-yellow-500">Registers Now </a></p>
+                        <p>SSVM Institutions (Self-Nomination) - <a href="https://zfrmz.com/aTCRosoAmrk6TL01K5Al" target="_blank" class="text-yellow-500">Registers Now </a></p>
                     </div>
                     <div class="flex flex-row gap-3 justify-start items-start">
                         <img src="images/ele.png" alt="" class="h-[20px] pt-1">
-                        <p>⁠Gurus of SSVM Institutions (Nominate Others) - <a href="https://zfrmz.com/J3Fmv638fBs8MdeMymrj" class="text-yellow-500">Registers Now </a></p>
+                        <p>SSVM Institutions (Nominate Others) - <a href="https://zfrmz.com/J3Fmv638fBs8MdeMymrj" target="_blank" class="text-yellow-500">Registers Now </a></p>
                     </div>
                     <div class="flex flex-row gap-3 justify-start items-start">
                         <img src="images/ele.png" alt="" class="h-[20px] pt-1">
-                        <p>⁠Gurus of Other Institutions (Self-Nomination) - <a href="https://zfrmz.com/MIuzzQtneR2ctgRtUGiT" class="text-yellow-500">Registers Now </a></p>
+                        <p>Other Institutions (Self-Nomination) - <a href="https://zfrmz.com/MIuzzQtneR2ctgRtUGiT" target="_blank" class="text-yellow-500">Registers Now </a></p>
                     </div>
                     <div class="flex flex-row gap-3 justify-start items-start">
                         <img src="images/ele.png" alt="" class="h-[20px] pt-1">
-                        <p>⁠Gurus of Other Institutions (Nominate Others) - <a href="https://zfrmz.com/BkwJulNeRdqjBz36lRzb" class="text-yellow-500">Registers Now </a></p>
+                        <p>Other Institutions (Nominate Others) - <a href="https://zfrmz.com/BkwJulNeRdqjBz36lRzb" target="_blank" class="text-yellow-500">Registers Now </a></p>
                     </div>
                     
             </div>
@@ -267,11 +267,11 @@
                     </p>
                     <div class="flex flex-row gap-3 justify-start items-start">
                         <img src="images/ele.png" alt="" class="h-[20px] pt-1">
-                        <p>Studentpreneur Awards (Internal) <a href="https://zfrmz.com/ZwsdgSxYG3XYphLPNcMQ" class="text-yellow-500">Registers Now </a></p>
+                        <p>Studentpreneur Awards (SSVM Institutions) <a href="https://zfrmz.com/ZwsdgSxYG3XYphLPNcMQ" target="_blank" class="text-yellow-500">Registers Now </a></p>
                     </div>
                     <div class="flex flex-row gap-3 justify-start items-start">
                         <img src="images/ele.png" alt="" class="h-[20px] pt-1">
-                        <p>Studentpreneur Awards (External) - <a href="https://zfrmz.com/J3Fmv638fBs8MdeMymrj" class="text-yellow-500">Registers Now </a></p>
+                        <p>Studentpreneur Awards (Other Institutions) - <a href="https://zfrmz.com/J3Fmv638fBs8MdeMymrj" target="_blank" class="text-yellow-500">Registers Now </a></p>
                     </div>
             </div>
             <div class="md:w-3/12 w-full text-end flex flex-col gap-3">
@@ -351,9 +351,9 @@
     </div>
     <div class="md:w-1/2 w-full py-6 px-4 flex flex-col gap-[10px] justify-center items-start text-black">
         <h4 class="text-start text-2xl ">Contact Us</h4>
-        <p> Location: Sf No 72/2, Pattanam, To, Vellalore Rd, Vaigai Nagar, Singanallur, Coimbatore, Tamil Nadu 641016 <br></p>
-        <p> Phone: <a href="tel:+919344451888" class="hover:text-gray-600">+91 93444 51888</a><br></p>
-        <p> Email: <a href="mailto:tic@ssvminstitutions.ac.in" class="hover:text-gray-600">tic@ssvminstitutions.ac.in</a></p>
+        <p class="text-start"> Location: Sf No 72/2, Pattanam, To, Vellalore Rd, Vaigai Nagar, Singanallur, Coimbatore, Tamil Nadu 641016 <br></p>
+        <p class="text-start"> Phone: <a href="tel:+919344451888" class="hover:text-gray-600">+91 93444 51888</a><br></p>
+        <p class="text-start"> Email: <a href="mailto:tic@ssvminstitutions.ac.in" class="hover:text-gray-600">tic@ssvminstitutions.ac.in</a></p>
     </div>
 
 </div>
