--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
         </div>
         <div class="flex flex-col md:flex-row justify-between  uppercase gap-8">      
             <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10 bg-white">
-                <p class="text-black pb-5 !font-bold text-xl">SSVM Institutions</p>
+                <p class="text-black pb-5 !font-bold !text-[24px]">SSVM Institutions</p>
                 <div class="flex justify-center gap-10">
                     <a href="https://zfrmz.com/aTCRosoAmrk6TL01K5Al" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Self nomination </a>
                     <a href="https://zfrmz.com/J3Fmv638fBs8MdeMymrj" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">nominate others</a>
                 </div>
             </div>
             <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10 bg-white">
-                <p class="text-black pb-5 !font-bold text-xl">other institutions</p>
+                <p class="text-black pb-5 !font-bold !text-[24px]">other institutions</p>
                 <div class="flex justify-center gap-10">
                     <a href="https://zfrmz.com/MIuzzQtneR2ctgRtUGiT" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Self nomination </a>
                     <a href="https://zfrmz.com/BkwJulNeRdqjBz36lRzb" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">nominate others</a>
@@ -222,14 +222,14 @@
         </div>
         <div class="flex flex-col md:flex-row justify-between uppercase gap-12">      
             <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10 bg-white">
-                <p class="text-black pb-5 !font-bold text-xl">SSVM Institutions</p>
+                <p class="text-black pb-5 !font-bold !text-[24px]">SSVM Institutions</p>
                 <div class="flex justify-center gap-10">
                     <a href="https://zfrmz.com/ZwsdgSxYG3XYphLPNcMQ" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Register Now </a>
                 </div>
             </div>
             <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10
              bg-white">
-                <p class="text-black pb-5 !font-bold text-xl">other institutions</p>
+                <p class="text-black pb-5 !font-bold !text-[24px]">other institutions</p>
                 <div class="flex justify-center gap-10">
                     <a href="https://zfrmz.com/Q5WNMV2864HmQZoSmXFc" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Register Now</a>
                 </div>
@@ -258,10 +258,10 @@
                     <iframe class="w-full" src="https://www.youtube.com/embed/lA-mD4EEG9Y?si=ztFP5MFBVdN07CQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="w-full relative cursor-pointer hover:scale-105 transition-transform duration-300">
-                    <iframe class="w-full" src="https://www.youtube.com/embed/lA-mD4EEG9Y?si=ztFP5MFBVdN07CQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="w-full" src="https://www.youtube.com/embed/9AajDUrNRH0?si=UBwUGoGRehBreGZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="w-full relative cursor-pointer hover:scale-105 transition-transform duration-300">
-                    <iframe class="w-full" src="https://www.youtube.com/embed/lA-mD4EEG9Y?si=ztFP5MFBVdN07CQA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="w-full" src="https://www.youtube.com/embed/3o3-GtWP2Zk?si=f8_i0-6KnSDURkvZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
