Update index.html and style.css: enhance social media section with new text styling and add text stroke effect for improved visual appeal.

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                <p class="text-start flex gap-3 items-center"> <img src="images/footer/ion_call.png" alt=""> Phone: <a href="tel:+919344451888" class="hover:text-gray-600">+91 93444 51888</a><br></p>
                <p class="text-start flex gap-3 items-center"> <img src="images/footer/Symbol-2.png" alt=""> Email: <a href="mailto:tic@ssvminstitutions.ac.in" class="hover:text-gray-600">tic@ssvminstitutions.ac.in</a></p>
 
-               <p class="pt-10 uppercase text-lg font-semibold underline ">sociaL MediA</p>
+               <p class="pt-10 uppercase text-lg !font-bold !text-[24px]  ">soci<span class="text-stroke-black">a</span>l Med<span class="text-stroke-black">i</span>a</p>
                <div class="flex items-center gap-5">
                    <a href="https://www.instagram.com/ssvmtransformingindia/"><img src="images/footer/fi_717392.png" alt=""></a>
                    <a href="https://www.facebook.com/SSVMTransformIndia"><img src="images/footer/gg_facebook.png" alt=""></a>
