Update index.html: adjust padding for registration sections to enhance layout consistency and improve visual appeal.

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     
             </div> 
         </div>
-        <div class="flex py-5 items-center gap-4 container mx-auto">
+        <div class="flex md:py-5 pt-8 pb-5 items-center gap-4 container mx-auto">
             <img src="images/ele.png" alt="" class="md:h-20 h-10"><h4 class="text-4xl text-start heading-5">Registr<span class="text-stroke">a</span>t<span class="text-stroke">i</span>on</h4>
         </div>
         <div class="flex flex-col md:flex-row justify-between  uppercase gap-8">      
@@ -217,7 +217,7 @@
                 <img src="images/studentaward-c.gif" alt="" class="object-cover h-[100%] w-[100%] !h-[350px]  md:pt-0 pt-4">
             </div>
         </div>
-        <div class="flex md:py-5 py-5 items-center gap-4 container mx-auto">
+        <div class="flex md:py-5 pt-8 pb-5 items-center gap-4 container mx-auto">
             <img src="images/ele.png" alt="" class="md:h-20 h-10"><h4 class="text-4xl text-start heading-5">Registr<span class="text-stroke">a</span>t<span class="text-stroke">i</span>on</h4>
         </div>
         <div class="flex flex-col md:flex-row justify-between uppercase gap-12">      
