--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SSVM</title>
+    <title>SSVM Institutions | Transforming India Conclave 2025 – Humanity and AI co creating Our World Today</title>
     <link rel="stylesheet" href="https://use.typekit.net/eiq0gee.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     
