--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <header class="">
-    <div class="  absolute top-0 w-full px-5">
+    <div class="  absolute top-0 w-full px-5 z-10">
         
             <nav class="px-4 py-4 flex justify-between items-center">
                 <a class="text-3xl font-bold leading-none" href="#">
@@ -84,7 +84,9 @@
     </div>
 </header>
 
+<div class="fixed-bg">
 
+</div>
 
 <section id="home" class="bg1 items-center justify-center flex container-fluid">
 <div class="w-full">
@@ -137,7 +139,7 @@
         </div>
 
         <!--  -->
-</div>
+    </div>
 </section>
 
 
@@ -377,7 +379,7 @@
     </div>
  
  </section> -->
- <div id="contact" class="map-container bg-[#0A1E4FB2] flex flex-col justify-between">
+ <div id="contact" class="map-container bg-[#0A1E4FB2] flex flex-col justify-between relative z-10">
     <!-- <h2 class="ssvm-h1 text-start   ">Location</h2> -->
      <div class="container mx-auto px-5 md:px-0 py-12">
                <!-- <div class="flex items-center gap-4 py-20 container mx-auto">
