--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
                     <a href="https://zfrmz.com/aTCRosoAmrk6TL01K5Al" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Self nomination </a>
                     <a href="https://zfrmz.com/J3Fmv638fBs8MdeMymrj" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">nominate others</a>
                 </div>
+                <p class="underline text-black !text-[12px] pt-10">Lasts date to apply: 10th June </p>
             </div>
             <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10 bg-white">
                 <p class="text-black pb-5 !font-bold !text-[24px]">other institutions</p>
@@ -226,6 +227,7 @@
                     <a href="https://zfrmz.com/MIuzzQtneR2ctgRtUGiT" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Self nomination </a>
                     <a href="https://zfrmz.com/BkwJulNeRdqjBz36lRzb" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">nominate others</a>
                 </div>
+                <p class="underline text-black !text-[12px] pt-10">Last date to apply: 30th June  </p>
             </div>
             
         </div>
@@ -253,6 +255,7 @@
                 <div class="flex justify-center gap-10">
                     <a href="https://zfrmz.com/ZwsdgSxYG3XYphLPNcMQ" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Register Now </a>
                 </div>
+                <p class="underline text-black !text-[12px] pt-10">Lasts date to apply: 10th June </p>
             </div>
             <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10
              bg-white">
@@ -260,6 +263,7 @@
                 <div class="flex justify-center gap-10">
                     <a href="https://zfrmz.com/Q5WNMV2864HmQZoSmXFc" target="_blank" class="text-base rounded-lg bg-linear-to-b from-[#FAD208] to-[#F2821E] px-5 py-2">Register Now</a>
                 </div>
+                <p class="underline text-black !text-[12px] pt-10">Last date to apply: 30th June  </p>
             </div>
             
         </div>
@@ -456,7 +460,7 @@
                </div>
            </div>
            <div class="md:w-1/2 w-full border-2 border-[#F49619]">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7833.431334622438!2d77.042473!3d10.984821!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8590b626ba69d%3A0x880bae2936eeec4c!2sSSVM%20World%20School%20CBSE%20SCHOOL%20IN%20COIMBATORE!5e0!3m2!1sen!2sin!4v1744439837804!5m2!1sen!2sin" width="100%" height="430" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7833.431334622438!2d77.042473!3d10.984821!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba8590b626ba69d%3A0x880bae2936eeec4c!2sSSVM%20World%20School%20CBSE%20SCHOOL%20IN%20COIMBATORE!5e0!3m2!1sen!2sin!4v1744439837804!5m2!1sen!2sin" width="100%" height="440" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
            </div>
 
        </div>
