style: remove unnecessary line breaks and fix spacing in HTML
This commit removes unnecessary line breaks in the HTML structure and fixes minor spacing issues to improve code readability and consistency.

--- a/studentpreneur-award.html
+++ b/studentpreneur-award.html
@@ -137,8 +137,7 @@
                         <li class="text-black !text-[12px] !text-start !normal-case !font-normal">For any queries, please contact: tic@ssvminstitutions.ac.in</li>
                 </ul>
             </div>
-            <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10
-             bg-white">
+            <div class="border-2 border-[#F49619] w-full md:w-1/2 p-4 md:p-10 bg-white">
                 <!-- <p class="text-black pb-5 !font-bold !text-[24px]">other institutions</p> -->
                 <div class="flex justify-center gap-10">
                     <iframe aria-label='STUDENTPRENEUR AWARD EXTERNAL' frameborder="0" style="height:500px;width:99%;border:none;" src='https://forms.zohopublic.com/xtracut/form/STUDENTPRENEURAWARD1/formperma/d2xZavhSGFnXR9b4IY9natvc-A0nvu7C4VSQLp8gcxk'></iframe>
@@ -152,7 +151,7 @@
                         <li class="text-black !text-[12px] !text-start !normal-case !font-normal"><b>Grade & Team Limit:</b> Open to 8th-12th grade students, with a maximum of 3 members per team.</li>
                         <li class="text-black !text-[12px] !text-start !normal-case !font-normal"><b>Submission:</b> A document explaining the business idea must be submitted.</li>
                         <li class="text-black !text-[12px] !text-start !normal-case !font-normal"><b>Presentation:</b> Business ideas to be presented to the jury via a Zoom call.</li>
-                        <li class="text-black !text-[12px] !text-start !normal-case !font-normal"><b>Finale:</b>Shortlisted teams must attend the final event in person on September 1, 2 & 3 at SSVM World School, Coimbatore.</li>
+                        <li class="text-black !text-[12px] !text-start !normal-case !font-normal"><b>Finale: </b>Shortlisted teams must attend the final event in person on September 1, 2 & 3 at SSVM World School, Coimbatore.</li>
                         <li class="text-black !text-[12px] !text-start !normal-case !font-normal"><b>Confirmation:</b> Upon registration, a confirmation email will be sent, and further communication will follow.</li>
                         <li class="text-black !text-[12px] !text-start !normal-case !font-normal">For any queries, please contact: tic@ssvminstitutions.ac.in</li>
                 </ul>
