chore: remove unused GSAP CSS and JS files
The GSAP-related CSS and JS files were commented out as they are no longer needed in the project. This cleanup helps reduce unnecessary dependencies and improves code maintainability.

--- a/studentpreneur-award.html
+++ b/studentpreneur-award.html
@@ -20,7 +20,7 @@
     
     <!-- <link rel="stylesheet" href="counter.css"> -->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="gsap.css">
+    <!-- <link rel="stylesheet" href="gsap.css"> -->
 </head>
 <body>
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M79FS9NN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -78,9 +78,7 @@
     </div>
 </header>
 
-<div class="fixed-bg">
 
-</div>
 
 
 
@@ -244,7 +242,7 @@
 
 
     <script src="script.js"></script>
-    <script src="gsap.js"></script>
+    <!-- <script src="gsap.js"></script> -->
     <script src="counter.js"></script>
 
     
