feat(studentpreneur_award_external): add new form page with validation and styling
Added a new form page for the Studentpreneur Award external registration, including validation logic and CSS styling. The page integrates an iframe for form submission and ensures proper validation of user inputs. This change enhances the user experience by providing a seamless registration process.

--- a/thankyou.html
+++ b/thankyou.html
@@ -151,7 +151,7 @@ li span {
   </div>
 </header>
 <div class="container">
-    <h1 id="headline">Thankyou For Submitting Your Details</h1>
+    <h1 id="headline">Thank You for Submitting Your Details</h1>
   </div>
 
 
